"Zoom Axis" is not working on the node editor #65837

Closed
opened 2019-06-15 20:57:05 +02:00 by Daniel Mateo Posso · 19 comments

System Information
Operating system: Windows
Graphics card: NVIDIA 1050Ti

Blender Version
Broken: 2.8

Short description of error

When I use the "Zoom Axis" option in my preferences, it does work for the 3D view, but not for the Node Editor.

**System Information** Operating system: Windows Graphics card: NVIDIA 1050Ti **Blender Version** Broken: 2.8 **Short description of error** When I use the "Zoom Axis" option in my preferences, it does work for the 3D view, but not for the Node Editor.

Added subscriber: @Danimate

Added subscriber: @Danimate

Added subscriber: @ZedDB

Added subscriber: @ZedDB

It seems to invert for me.
Is this still an issue with the latest beta?

It seems to invert for me. Is this still an issue with the latest beta?

I catched the bug on the beta launched of June the 15th.
Right now I'm using the beta launched the 20th of June and it seems it's still having issues.
I noticed that I usually zoom in & out moving my mouse in the vertical axis (I did try the horizontal axis and as you say it's working fine), the vertical axis does some weird jumps from time to time that just happen in the Shader Editor.

I catched the bug on the beta launched of June the 15th. Right now I'm using the beta launched the 20th of June and it seems it's still having issues. I noticed that I usually zoom in & out moving my mouse in the vertical axis (I did try the horizontal axis and as you say it's working fine), the vertical axis does some weird jumps from time to time that just happen in the Shader Editor.

So it is working but not at certain points in time?

So it is working but not at certain points in time?

Added subscriber: @jenkm

Added subscriber: @jenkm

It seems that the Node Editor always use horizontal axis for Crtl-MMB zoom regardless of the "Zoom Axis" preference.
And the "Invert Mouse Zoom Direction" work fine.

It seems that the Node Editor always use horizontal axis for Crtl-MMB zoom regardless of the "Zoom Axis" preference. And the "Invert Mouse Zoom Direction" work fine.

So this is an axis issue and not a issue with the invert option?

So this is an axis issue and not a issue with the invert option?

Yep, so it seems

Yep, so it seems
Sebastian Parborg changed title from "Invert Mouse Zoom Direction" not working on the node editor to "Zoom Axis" is not working on the node editor 2019-06-25 18:20:39 +02:00
Sebastian Parborg self-assigned this 2019-06-25 18:20:49 +02:00

I've posted a potential fix here: D5132

I've posted a potential fix here: [D5132](https://archive.blender.org/developer/D5132)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks man! ?

Thanks man! ?

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Keeping open the report until the fix is in master.

Keeping open the report until the fix is in master.

Oh... thanks ?

Oh... thanks ?

This issue was referenced by bcda8cc89b

This issue was referenced by bcda8cc89b88c999ff64edcc19973d6289bcbf2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 9425628c84

This issue was referenced by 9425628c84d091591229d54fbb2bc3b36350d94e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65837
No description provided.